<resources>
    <string name="app_name">prodAPP</string>
    <string name="EmailTextViewTelaDeLogin">E-mail</string>
    <string name="SenhaTextViewTelaDeLogin">Senha</string>
    <string name="SalvarSenhaCheckBoxTelaDeLogin">Deseja salvar sua senha ?</string>
    <string name="EntrarButtonTelaDeLogin">Logar</string>
    <string name="EsqueceuSenhaTextViewTelaDeLogin">Problemas com sua conta ?</string>
    <string name="nomeSilo">1</string>
    <string name="quantidadeSilo">25.000</string>
    <string name="produtoSilo">Milho</string>
    <string name="NomeTextViewTelaDeCadastro">Nome:</string>
    <string name="EmailTextViewTelaDeCadastro">E-mail:</string>
    <string name="ConfirmarEmailTextViewTelaDeCadastro">Informe seu E-mail Novamente:</string>
    <string name="SenhaTextViewTelaDeCadastro">Senha:</string>
    <string name="ConfirmarSenhaTextViewTelaDeCadastro">Informe sua Senha Novamente:</string>
    <string name="CadastrarButtonTelaDeCadastro">Cadastrar-se</string>
    <string name="CamposObrigatorios">Esses Campos são \n Obrigatórios !</string>
    <string name="CampoSenhaUsuario">Você Deve Informar a Senha !</string>
    <string name="CampoEmailUsuario">Você Deve Informar o E-mail !</string>
    <string name="CampoNomeUsuario">Você Deve Informar o Nome !</string>
    <string name="EmailNaoCorreponde">Os E-mails Informados São Diferentes !</string>
    <string name="SenhaNaoCorreponde">As Senhas Informadas São Diferentes !</string>
    <string name="Atualizar_Evento">Atualizar Eventos</string>
    <string name="Campos_Obrigatorios">Campos Obrigatorios</string>
    <string name="mensagem_cadastrar">Resgistro cadastro com sucesso ! </string>
    <string name="mensagem_atualizar">Resgistro Atualizado com Sucesso ! </string>
    <string name="mensagem_erro">Erro ao Salvar !! ! </string>
    <string name="popin_textview_dataEvento">Informe a Data do Evento:</string>
    <string name="popin_button_dataEvento">Confirmar</string>
    <string name="popin_textview_Assunto">Assunto da Mensagem:</string>
    <string name="popin_edittext_Assunto" />
    <string name="popin_textview_Descricao">Descrição da Mensagem:</string>
    <string name="popin_edittext_Descricao" />
    <string name="popin_button_EnviarMensagem">Enviar Mensagem</string>
    <string name="popin_textview_AvaliacaoOrganizador">Avaliação de Organizador de Organizador</string>
    <string name="popin_textview_AvaliacaoOrganizadorDescricao">As avaliações feitas, vão pra um um Ranking Público de Qualidade.</string>
    <string name="popin_textview_NotaOrganizador">Atribua uma nota para o Organizador:</string>
    <string name="popin_textview_OrganizadorComentario">Escreva um breve comentário:</string>
    <string name="popin_edittext_ComentarioOrganizador" />
    <string name="popin_button_AvaliarOrganizador">Avaliar</string>
    <string name="popin_textview_AvaliacaoEvento">Avaliação do Evento</string>
    <string name="popin_textview_AvaliacaoEventoDescricao">As avaliações feitas neste campo, vão para um ranking público do evento.</string>
    <string name="popin_textview_NotaEvento">Atribua uma nota para este evento:</string>
    <string name="popin_textview_EventoComentario">Escreva um comentário sobre este evento:</string>
    <string name="popin_edittext_ComentarioEvento">Avaliar</string>
    <string name="popin_button_AvaliarEvento">Avaliar</string>
    <string name="popin_textview_MensagemTitulo">Duvidas Sobre o Evento?</string>
    <string name="popin_textview_MensagemDescricao">Envie uma mensagem para o organizador e tire suas duvidas.</string>
    <string name="listarevento_textview_ListarEvento">Lista de Todos os Eventos</string>
    <string name="categoria_lista_categoria">categoria_lista_categoria</string>
    <string name="CamposEmailDiferentes">O E-mail não Confere com o que foi Digitado Acima!</string>
    <string name="CamposSenhaDiferentes">A Senha não Confere com a que foi Digitada Acima!</string>
    <string name="LoginTextViewTelaDeCadastro">Já é cadastrado? Clique aqui e faça login</string>
    <string name="CriarContaUsuarioTextViewTelaDeLogin">Ainda não é cadastrado? Clique aqui.</string>
    <string name="title_activity_menu_lateral">MenuLateralActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sair">Sair</string>
    <string name="maisInfoRotacao">Ver mais informações</string>
    <string name="IdentificacaoTextViewTelaDeCadastroSilo">Nome ou descrição</string>
    <string name="IdentificacaoEditTextTelaDeCadastroSilo" />
    <string name="EstocagemTextViewTelaDeCadastroSilo">Tipo de grão estocado</string>
    <string name="CapacidadeTextViewTelaDeCadastroSilo">Capacidade total de estocagem (kg)</string>
    <string name="CapacidadeEditTextTelaDeCadastroSilo" />
    <string name="CadastrarButtonTelaDeCadastroSilo">Cadastrar Silo</string>
    <string name="OpcoesTextViewTelaDeGerenciamentoDeSilos">O Que Deseja Fazer?</string>
    <string name="TituloAdicaoDeProdutoTextViewTelaDeGerenciamentoDeSilos">Adicionar Produto Ao Silo:</string>
    <string name="TipoDeProdutoAdicionarTextViewTelaDeGerenciamentoDeSilos">Tipo do Produto:</string>
    <string name="QuantidadeDoProdutoAdicionarTextViewTelaDeGerenciamentoDeSilos">Quantidade do Produto:</string>
    <string name="AdicionarButtonTelaDeGerenciamentoDeSilos">Adicionar Produto Ao Silo</string>
    <string name="TituloRemocaoDeProdutoTextViewTelaDeGerenciamentoDeSilos">Remover Produto do Silo</string>
    <string name="QuantidadeDoProdutoRetirarTextViewTelaDeGerenciamentoDeSilos">Quantidade do Produto:</string>
    <string name="RetirarButtonTelaDeGerenciamentoDeSilos">Retirar Produto do Silo</string>
    <string name="NomeDetalheTextViewTelaDeDetalhesDoSilo">Nome/Descrição</string>
    <string name="TipoDeGraoTextViewTelaDeDetalhesDoSilo">Tipo de grão</string>
    <string name="PorteDoSiloTextViewTelaDeDetalhesDoSilo">Porte do silo</string>
    <string name="FiltroTextViewTelaDeDetalhesDoSilo">Filtro</string>
    <string name="KgRadioButtonTelaDeDetalhesDoSilo">Kg</string>
    <string name="TonRadioButtonTelaDeDetalhesDoSilo">Ton</string>
    <string name="CapacidadeTotalTextViewTelaDeDetalhesDoSilo">Capacidade total</string>
    <string name="CapacidadeUtilizadaTextViewTelaDeDetalhesDoSilo">Capacidade utilizada</string>
    <string name="CapacidadeDisponivelTextViewTelaDeDetalhesDoSilo">Capacidade disponível</string>
    <string name="DataDaCriacaoTextViewTelaDeDetalhesDoSilo">Data de criação</string>
    <string name="textViewTitulo">Ácaro-Branco</string>
    <string name="textViewTituloAbaixo">Polyphagotarsonemus latus</string>
    <string name="PragaSoja1Parte1">Esse ácaro possui tamanho reduzido de 0,2 mm de comprimento e coloração clara, quase transparente. Vive na face inferior das folhas e é de difícil visualização sem lente de aumento. </string>
    <string name="PragaSoja1Parte2">Ao contrário de outras espécies, esta não produz teia. Os machos carregam as ninfas das fêmeas nas costas e as fecundam logo que elas passam à fase adulta. A postura dos ovos ocorre preferencialmente na face inferior das folhas. </string>
    <string name="PragaSoja1Parte3">As larvas também são claras e se movimentam rapidamente pela folha. Em razão do curto ciclo biológico desse ácaro, de 3 a 5 dias, é importante que sejam feitas inspeções periódicas na lavoura, com o objetivo de identificar os primeiros focos de infestação e contê-la no início. </string>
    <string name="PragaSoja1Parte4">Essa praga é encontrada em diversas culturas. Na soja, causa o bronzeamento de folhas, hastes, caule e principalmente brotações. As folhas atacadas ficam com cor castanha, brilhante e podem apresentar as bordas dobradas para baixo, consistência alterada e ficar quebradiças. Condições climáticas com muitas chuvas e temperaturas altas favorecem seu desenvolvimento.</string>
    <string name="PragaSoja2Parte1">As moscas-brancas são insetos com cerca de 1 mm de comprimento e coloração branca, decorrente da cera que recobre suas asas. Vivem em colônias compostas por ovos, ninfas e adultos na face inferior das folhas, os ovos apresentam formato de pera, coloração amarela e são postos isoladamente ou em grupos. Ficam fixados às folhas por um pequeno pedúnculo.</string>
    <string name="PragaSoja2Parte2">O tempo para eclosão é de aproximadamente sete dias. A fase ninfa, dependendo das condições climáticas e da planta hospedeira, pode durar apenas cinco dias. As ninfas são amareladas e translúcidas e locomovem-se apenas nos primeiros momentos, pois logo se fixam nas folhas. A dispersão das colônias para outras folhas e plantas é feita pelos adultos, que voam quando as folhas são sacudidas, há grande quantidade de insetos ou a planta já enfraqueceu e não supre mais suas necessidades. Desenvolvem-se anualmente de 11 a 15 gerações, dependendo das condições ambientais.</string>
    <string name="PragaSoja2Parte3">O clima quente e úmido favorece o seu desenvolvimento. As moscas-brancas atacam mais de 500 espécies de plantas, de diversas famílias. Causam danos pela retirada de nutrientes e água e pela transmissão de doenças. As plantas infestadas mostram-se enfraquecidas, as folhas caem e os frutos ficam murchos, amadurecem irregularmente e também podem cair precocemente. Em consequência da sua presença, também há a formação de fumagina – fungo que se desenvolve sobre as excreções dos insetos na superfície das folhas –, que prejudica a fotossíntese e a respiração vegetal.</string>
    <string name="NoticiaAgroesteParte1">A AGROESTE, realizou na Fazenda Gávea, um Dia de Campo lançamento da variedade de soja: AS 3680 IPRO, com meta de produção acima de 75 sacas por hectares.</string>
    <string name="NoticiaAgroesteParte2">Durante o Dia de Campo, o Representante Comercial da AGROESTE, Nogueira, apresentou a variedade AS 3680 IPRO, plantada em duas áreas comerciais, sendo uma sobre palhada de Nabo e outra de Sorgo.</string>
    <string name="NoticiaAgroesteParte3">A variedade de soja AS 3680 IPRO, é uma variedade ideal para abertura de plantio, final de setembro a meados de outubro e possui Precocidade, Sanidade e Potencial Produtivo.</string>
    <string name="NoticiaAgroesteParte4">Na área plantada em 25/09/2016 sobre palhada nabo forrageiro, já em colheita, a média de produção é de 72 sacas de soja por hectare, com 105 dias após o plantio. Vale ressaltar que é a primeira área de soja colhida no município nessa safra.</string>
    <string name="NoticiaAgroesteParte5">Já na área ao lado com a mesma variedade, plantada em 05/10/2016 sobre palhada de sorgo, a previsão é de mais de 80 sacas por hectare.</string>
    <string name="NoticiaAgroesteParte6">Outra característica da AS 3680 IPRO é o sistema de engalhamento e alta quantidade de vargem em média de 80 vargem por pés.</string>
    <string name="NoticiaAgroesteParte7">Segundo o Eng. Agrônomo Paulo Buzolin, responsável pela Fazenda, além das qualidades da nova variedade AS 3680 IPRO, o manejo utilizado antes do plantio da soja, aplicação de TRICHODERMIL + EQUI-SOLO, na palhada do sorgo mostrou um resultado surpreendente, onde a lavoura de soja apresenta uniformidade de plantas, sistema radicular mais vigoroso, e maior número de vagens por planta, quando comparado a área testemunha sem os produtos.</string>
    <string name="NoticiaAgroesteParte8">Para mais informações sobre a Agroeste e seus produtos clique aqui.</string>
</resources>