<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayoutTelaDeLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alunos.prodapp.TelaDeLogin">

    <ScrollView
        android:id="@+id/ScrollViewTelaDeLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/LinearLayoutVerticalTelaDeLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/IconeImageViewTelaDeLogin"
                android:layout_width="match_parent"
                android:layout_height="288dp"
                app:srcCompat="@android:drawable/btn_dialog" />

            <TextView
                android:id="@+id/EmailTextViewTelaDeLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EmailTextViewTelaDeLogin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:id="@+id/EmailEditTextTelaDeLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="exemplo@exemplo.com"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/SenhaTextViewTelaDeLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/SenhaTextViewTelaDeLogin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:id="@+id/SenhaEditTextTelaDeLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="********"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/SalvarSenhaCheckBoxTelaDeLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/SalvarSenhaCheckBoxTelaDeLogin" />

            <Button
                android:id="@+id/EntrarButtonTelaDeLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/EntrarButtonTelaDeLogin" />

            <TextView
                android:id="@+id/EsqueceuSenhaTextViewTelaDeLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/EsqueceuSenhaTextViewTelaDeLogin"
                android:textAlignment="viewEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:visibility="visible" />

            <TextView
                android:id="@+id/CriarContaUsuarioTextViewTelaDeLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CriarContaUsuarioTextViewTelaDeLogin"
                android:textColor="@android:color/holo_red_light"
                android:textAlignment="center"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
