<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alunos.prodapp.TelaDeDetalhesDoSilo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/FiltroTextViewTelaDeDetalhesDoSilo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/FiltroTextViewTelaDeDetalhesDoSilo" />

                    <RadioGroup
                        android:id="@+id/FiltroRadioGroupTelaDeDetalhesDoSilo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="200dp"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/KgRadioButtonTelaDeDetalhesDoSilo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/KgRadioButtonTelaDeDetalhesDoSilo" />

                        <RadioButton
                            android:id="@+id/TonRadioButtonTelaDeDetalhesDoSilo"
                            android:layout_width="67dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:text="@string/TonRadioButtonTelaDeDetalhesDoSilo" />

                    </RadioGroup>

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/NomeDetalheTextViewTelaDeDetalhesDoSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NomeDetalheTextViewTelaDeDetalhesDoSilo" />

            <TextView
                android:id="@+id/RecebeNomeDetalheTextViewTelaDeDetalhesDoSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="Silo Teste"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/TipoDeGraoTextViewTelaDeDetalhesDoSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/TipoDeGraoTextViewTelaDeDetalhesDoSilo" />

            <TextView
                android:id="@+id/RecebeTipoDeGraoTextViewTelaDeDetalhesDoSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="Soja"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/PorteDoSiloTextViewTelaDeDetalhesDoSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/PorteDoSiloTextViewTelaDeDetalhesDoSilo" />

            <TextView
                android:id="@+id/RecebePorteDoSiloTextViewTelaDeDetalhesDoSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="Médio"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/CapacidadeTotalTextViewTelaDeDetalhesDoSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/CapacidadeTotalTextViewTelaDeDetalhesDoSilo" />

            <TextView
                android:id="@+id/RecebeCapacidadeTotalTextViewTelaDeDetalhesDoSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="100.000 Kg"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/CapacidadeUtilizadaTextViewTelaDeDetalhesDoSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/CapacidadeUtilizadaTextViewTelaDeDetalhesDoSilo" />

            <TextView
                android:id="@+id/RecebeCapacidadeUtilizadaTextViewTelaDeDetalhesDoSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="30.000 Kg"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/CapacidadeDisponivelTextViewTelaDeDetalhesDoSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/CapacidadeDisponivelTextViewTelaDeDetalhesDoSilo" />

            <TextView
                android:id="@+id/RecebeCapacidadeDisponivelTextViewTelaDeDetalhesDoSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="70.000 Kg"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/DataDaCriacaoTextViewTelaDeDetalhesDoSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/DataDaCriacaoTextViewTelaDeDetalhesDoSilo" />

            <TextView
                android:id="@+id/RecebeDataDaCriacaoTextViewTelaDeDetalhesDoSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="07/06/2017 03:34"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
