<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayoutTelaDeCadastroSilos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alunos.prodapp.TelaCadastroSilos">

    <ScrollView
        android:id="@+id/ScrollViewTelaDeCadastroSilos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/LinearLayoutVerticalTelaDeCadastroSilos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/IconeImageViewTelaDeCadastroSilo"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_marginBottom="30dp"
                app:srcCompat="@drawable/silofinal" />

            <TextView
                android:id="@+id/IdentificacaoTextViewTelaDeCadastroSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/IdentificacaoTextViewTelaDeCadastroSilo"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/IdentificacaoEditTextTelaDeCadastroSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="B49"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/EstocagemTextViewTelaDeCadastroSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/EstocagemTextViewTelaDeCadastroSilo"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/EstocagemSpinnerTelaDeCadastroSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/CapacidadeTextViewTelaDeCadastroSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/CapacidadeTextViewTelaDeCadastroSilo"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/CapacidadeEditTextTelaDeCadastroSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="5.000 kg"
                android:inputType="textPersonName|number"
                android:text="@string/CapacidadeEditTextTelaDeCadastroSilo"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/CadastrarButtonTelaDeCadastroSilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CadastrarButtonTelaDeCadastroSilo"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>